Slight formatting changes to concerts

--- a/views/concerts.html
+++ b/views/concerts.html
@@ -111,15 +111,16 @@
                           <span class='concert-event-url'>{{concert._id}}</span>
                         </li>
                       </ul>
+                      <!-- embed archive recording -->
                       <div class="music-player">
-
                       </div>
+
                   </div>
-
-                  <button type="button" class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{concert._id}}">Delete</button>
-                  <!-- end of concert internal row -->
-
                 </div>
+              </div>
+              <div class="panel-footer">
+                <button type="button" class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{concert._id}}">Delete</button>
+                <!-- end of concert internal row -->
               </div>
             </div>
           </div>
