--- a/views/concerts.html
+++ b/views/concerts.html
@@ -66,67 +66,80 @@
 
     <section>
       <!-- concerts! -->
-      <div id='concerts' data-concert-id="{{concert._id}}">
+      <div id='concerts'>
 
         <!-- handlebars template -->
         <script id="concert-template" type="text/x-handlebars-template">
 
+          {{#each concerts}}
           <!-- one concert -->
-          <div class="row concert">
+            <div class="row concert" data-concert-id="{{_id}}">
 
-            <div class="col-md-10 col-md-offset-1">
-              <div class="panel panel-default">
-                <div class="panel-body">
+              <div class="col-md-10 col-md-offset-1">
+                <div class="panel panel-default">
+                  <div class="panel-body">
 
 
-                <!-- begin concert internal row -->
-                  <div class='row concert-row'>
-                    <div class="col-xs-12">
-                      <h3 class='concert-name'>{{concert.eventName}}</h3>
-                    </div>
-                    <div class="col-md-3 col-xs-12 thumbnail concert-art">
-                      <span class='concert-image'><img class="img-responsive concert-image" src="{{concert.image_url}}"/></span>
-                    </div>
+                  <!-- begin concert internal row -->
+                    <div class='row concert-row'>
 
-                    <div class="col-md-9 col-xs-12">
-                      <ul class="list-group" id="add-concerts">
-                        <li class="list-group-item">
-                          <h4 class='inline-header'>Band</h4>
-                          <span class='concert-band' band-data-id="{{concert.band}}"></span>
-                        </li>
-                        <li class="list-group-item">
-                          <h4 class='inline-header'>Date</h4>
-                          <span class='concertDate'>{{concert.date}}</span>
-                        </li>
-                        <li class="list-group-item">
-                          <h4 class='inline-header'>Location:</h4>
-                          <span class='concert-releaseDate'>{{concert.location}}</span>
-                        </li>
-                        <li class="list-group-item">
-                          <h4 class='inline-header'>Description:</h4>
-                          <span class='concert-releaseDate'>{{concert.description}}</span>
-                        </li>
-                        <li class="list-group-item">
-                          <h4 class='inline-header'>ID</h4>
-                          <span class='concert-event-url'>{{concert._id}}</span>
-                        </li>
-                      </ul>
-                      <!-- embed archive recording -->
-                      <div class="music-player">
+                      <div class="col-md-3 col-xs-12 thumbnail concert-art">
+                        <span class='concert-image'><img class="img-responsive concert-image" src="{{image_url}}"/></span>
                       </div>
 
+                      <div class="col-md-9 col-xs-12">
+                        <ul class="list-group" id="add-concerts">
+                          <li class="list-group-item">
+                            <h3><span class='concert-eventName'>{{eventName}}</span></h3>
+                            <span class='concertId'>{{_id}}</span>
+                          </li>
+                          <li class="list-group-item">
+                            <h4 class='inline-header'>Band</h4>
+                            <span class='concert-bandId'>{{band}}</span>
+                          </li>
+                          <li class="list-group-item">
+                            <h4 class='inline-header'>Date</h4>
+                            <span class='concert-date'>{{date}}</span>
+                          </li>
+                          <li class="list-group-item">
+                            <h4 class='inline-header'>Location:</h4>
+                            <span class='concert-location'>{{location}}</span>
+                          </li>
+                          <li class="list-group-item">
+                            <h4 class='inline-header'>setlist</h4>
+                            <pre><span class='concert-setlist'>{{setlist}}</span></pre>
+                          </li>
+                          <li class="list-group-item">
+                            <h4 class='inline-header'>Description:</h4>
+                            <span class='concert-description'>{{description}}</span>
+                          </li>
+                          <li class="list-group-item edit-concert-image hidden">
+                            <h4 class='inline-header'>Image URL</h4>
+                            <span class='concert-image-url'>{{image_url}}</span>
+                          </li>
+                          <li class="list-group-item edit-concert-recording hidden">
+                            <h4 class='inline-header'>Recording URL:</h4>
+                            <span class='concert-recording-url'>{{recording_url}}</span>
+                          </li>
+                        </ul>
+                        <!-- embed archive recording -->
+                        <div class="music-player">
+                        </div>
+
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel-footer">
+                    <button class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{ concert._id }}">Delete</button>
+                    <button class="update-concert-button btn btn-md btn-primary pull-right" data-concert-id="{{ concert._id }}">Update</button>
+                    <button class="save-concert-button btn btn-success pull-right hidden" data-concert-id="{{ concert._id }}">Save Changes</button>
+                    <!-- end of concert internal row -->
                   </div>
                 </div>
               </div>
-              <div class="panel-footer">
-                <button type="button" class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{concert._id}}">Delete</button>
-                <!-- end of concert internal row -->
-              </div>
             </div>
-          </div>
-        </script>
-      </div>
-
+        {{/each}}
+      </script>
       <!-- end one concert -->
     </section>
 
@@ -134,7 +147,7 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-          <form id='concert-form' class="form-horizontal">
+          <form id='add-concert-form' class="form-horizontal">
             <fieldset>
 
             <!-- Form Name -->
@@ -149,9 +162,17 @@
             </div>
 
             <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="band">Band</label>
+              <label class="col-md-2 col-md-offset-1 control-label" for="bandId">Band</label>
               <div class="col-md-8">
-                <textarea id="concert-band" name="band" type="text" placeholder="Enter Band IDs, separated by commas" class="form-control input-md"></textarea>
+                <input id="concert-bandId" name="bandId" type="text" placeholder="Enter Band ID" class="form-control input-md" required=""></input>
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="date">Date</label>
+              <div class="col-md-8">
+                <input id="concert-date" name="concertDate" type="date" placeholder="" class="form-control input-md">
               </div>
             </div>
 
@@ -163,11 +184,19 @@
               </div>
             </div>
 
-            <!-- Text input-->
+            <!-- Textarea-->
             <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="date">Date</label>
+              <label class="col-md-2 col-md-offset-1 control-label" for="setlist">Setlist</label>
               <div class="col-md-8">
-                <input id="concert-date" name="concertDate" type="date" placeholder="" class="form-control input-md">
+              <textarea id="concert-setlist" name="setlist" type="text" placeholder="Enter Setlist here" class="form-control input-md"></textarea>
+              </div>
+            </div>
+
+            <!-- Textarea-->
+            <div class="form-group">
+              <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
+              <div class="col-md-8">
+              <textarea id="concert-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
               </div>
             </div>
 
@@ -187,18 +216,10 @@
               </div>
             </div>
 
-            <!-- Textarea-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
-              <div class="col-md-8">
-              <textarea id="concert-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
-              </div>
-            </div>
-
             <!-- Button -->
             <div class="form-group">
               <div class="col-md-4">
-                <button id="singlebutton" name="submit" class="btn btn-lg btn-primary add-concert-submit">Submit</button>
+                <button id="add-concert-button" name="submit" class="btn btn-lg btn-primary add-concert-button">Submit</button>
               </div>
             </div>
             </fieldset>
