--- a/views/bands.html
+++ b/views/bands.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -41,21 +42,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/bands">Bands<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">Bands<span class="sr-only">(current)</span></a></li>
             <li><a href="/concerts">Concerts</a></li>
-            <li><a href="/members">Members</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Bands</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Concerts</a></li>
-                <li role="separator" class="divider"></li>
-              </ul>
+            <li>
+              <li><a href="/myprofile">My Profile</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
