--- a/views/concerts.html
+++ b/views/concerts.html
@@ -42,20 +42,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/bands">Bands</a></li>
-            <li class="active"><a href="/concerts">Concerts<span class="sr-only">(current)</span></a></li>
-            <li><a href="/members">Members</a></li>
+            <li class="active"><a href="#">Concerts<span class="sr-only">(current)</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Bands</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Concerts</a></li>
-                <li role="separator" class="divider"></li>
-              </ul>
+            <li>
+              <li><a href="/myprofile">My Profile</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -165,6 +156,11 @@
               <label class="col-md-2 col-md-offset-1 control-label" for="bandId">Band</label>
               <div class="col-md-8">
                 <input id="concert-bandId" name="bandId" type="text" placeholder="Enter Band ID" class="form-control input-md" required=""></input>
+                <!-- <select class="" name="">
+                  {#each bands}
+                  <option name="{{ band.name }}" value="{{ band._id }}">{{ band.name }}</option>
+                  {/each}
+                </select> -->
               </div>
             </div>
 
