--- a/views/index.html
+++ b/views/index.html
@@ -43,19 +43,10 @@
           <ul class="nav navbar-nav">
             <li><a href="/bands">Bands</a></li>
             <li><a href="/concerts">Concerts</a></li>
-            <li><a href="/members">Members</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Bands</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Concerts</a></li>
-                <li role="separator" class="divider"></li>
-              </ul>
+            <li>
+              <li><a href="/login">Login</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
