--- a/views/profile.html
+++ b/views/profile.html
@@ -43,26 +43,21 @@
           <ul class="nav navbar-nav">
             <li><a href="/bands">Bands</a></li>
             <li><a href="/concerts">Concerts</a></li>
-            <li class="active"><a href="/members">Members<span class="sr-only">(current)</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Bands</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">My Concerts</a></li>
-                <li role="separator" class="divider"></li>
-              </ul>
+            <li>
+              <li class="active"><a href="#">My Profile<span class="sr-only">(current)</span></a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
-    <h1>User Profile Index</h1>
+    <h1>My Profile</h1>
+    </br>
+    <h2>My Bands</h2>
+    </br>
+    <h2>My Concerts</h2>
 
   </body>
 </html>
