--- a/views/bands.html
+++ b/views/bands.html
@@ -63,7 +63,7 @@
       <div id='bands'>
 
         <!-- handlebars template -->
-        <script id="band-template" type="text/x-handlebars-template">
+        <script id="band-list-template" type="text/x-handlebars-template">
 
           {{#each bands}}
             <!-- one band -->
@@ -114,7 +114,9 @@
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Concerts:</h4>
-                            <span class='band-concerts'>{{concerts}}</span>
+                            <!-- {{#each concerts}} -->
+                            <a href="/api/concerts/{{concerts}}"<span class='band-concerts'>{{concerts}}</span></a>
+                            <!-- {{/each}} -->
                           </li>
                         </ul>
                       </div>
@@ -139,68 +141,74 @@
     <section class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
+          <div id=add-band-form-container>
+            <script id="add-band-form-template" type="text/x-handlebars-template">
+              <form id='add-band-form' class="form-horizontal">
+                <fieldset>
 
-          <form id='add-band-form' class="form-horizontal">
-            <fieldset>
+                <!-- Form Name -->
+                <legend>Add New Artist</legend>
 
-            <!-- Form Name -->
-            <legend>Add New Artist</legend>
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="name">Artist Name</label>
+                  <div class="col-md-8">
+                    <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+                  </div>
+                </div>
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="formationDate">Formation Date</label>
+                  <div class="col-md-8">
+                    <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
+                  </div>
+                </div>
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="recordLabal">Record Label</label>
+                  <div class="col-md-8">
+                    <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
+                  </div>
+                </div>
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="image_url">Image URL</label>
+                  <div class="col-md-8">
+                    <input id="band-image" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
+                  </div>
+                </div>
+                <!-- Textarea-->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
+                  <div class="col-md-8">
+                    <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+                  </div>
+                </div>
+                <!-- Textarea -->
+                <div class="form-group">
+                  <label class="col-md-2 col-md-offset-1 control-label" for="genres">Genres</label>
+                  <div class="col-md-8">
+                    <textarea class="form-control input-md" id="band-genres" name="genres" placeholder="Enter Genres (separated by commas)"></textarea>
+                  </div>
+                </div>
 
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="name">Artist Name</label>
-              <div class="col-md-8">
-                <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
-              </div>
-            </div>
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="formationDate">Formation Date</label>
-              <div class="col-md-8">
-                <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
-              </div>
-            </div>
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="recordLabal">Record Label</label>
-              <div class="col-md-8">
-                <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
-              </div>
-            </div>
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="image_url">Image URL</label>
-              <div class="col-md-8">
-                <input id="band-image" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
-              </div>
-            </div>
-            <!-- Textarea-->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
-              <div class="col-md-8">
-                <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
-              </div>
-            </div>
-            <!-- Textarea -->
-            <div class="form-group">
-              <label class="col-md-2 col-md-offset-1 control-label" for="genres">Genres</label>
-              <div class="col-md-8">
-                <textarea class="form-control input-md" id="band-genres" name="genres" placeholder="Enter Genres (separated by commas)"></textarea>
-              </div>
-            </div>
+                <!-- Button -->
+                <div class="form-group">
+                  <div class="col-md-4">
+                    <a id="add-band-button"
+                      onclick="handleAddBandClick(this.form)"
+                      name="submit"
+                      class="btn btn-lg btn-primary add-band-button">
+                      Submit
+                    </a>
+                  </div>
+                </div>
 
-            <!-- Button -->
-            <div class="form-group">
-              <div class="col-md-4">
-                <button id="add-band-button" name="submit" class="btn btn-lg btn-primary add-band-button">Add Band</button>
-              </div>
-            </div>
-
-            </fieldset>
-          </form>
+                </fieldset>
+              </form>
+          </div>
         </div>
       </div>
     </section>
-
   </body>
 </html>
