Added in code for modal, not functional yet

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,3 +57,9 @@ iframe {
   width: 100%;
   height: 350px;
 }
+#concert-select {
+  width:100%;
+}
+.add-concerts-button {
+  margin-right: 10px;
+}
