--- a/views/bands.html
+++ b/views/bands.html
@@ -54,8 +54,6 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container">
-
     <h1 id="bands-header">Bands</h1>
 
     <section>
@@ -87,6 +85,7 @@
                         <ul class="list-group">
                           <li class="list-group-item">
                             <h3><span class='band-name'><a class ="show-single-band" href="/api/bands/{{_id}}">{{name}}</a></span></h3>
+                            <span class='band-Id'>{{_id}}</span>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Formation Date:</h4>
@@ -109,14 +108,9 @@
                             <span class='band-image-url'>{{image_url}}</span>
                           </li>
                           <li class="list-group-item">
-                            <h4 class='inline-header'>ID:</h4>
-                            <span class='band-Id'>{{_id}}</span>
-                          </li>
-                          <li class="list-group-item">
                             <h4 class='inline-header'>Concerts:</h4>
-                            <!-- {{#each concerts}} -->
-                            <a href="/api/concerts/{{concerts}}"<span class='band-concerts'>{{concerts}}</span></a>
-                            <!-- {{/each}} -->
+                            <span id="concert-list"></span>
+                            <span class='band-concerts'>{{concerts}}</span>
                           </li>
                         </ul>
                       </div>
@@ -126,6 +120,7 @@
                     <button class="delete-band-button btn btn-md btn-danger pull-right" data-band-id="{{ _id }}">Delete</button>
                     <button class="update-band-button btn btn-md btn-primary pull-right" data-band-id="{{ _id }}">Update</button>
                     <button class="save-band-button btn btn-success pull-right hidden" data-band-id="{{ _id }}">Save Changes</button>
+                    <button type="button" class="add-concerts-button btn btn-success pull-right" data-toggle="modal" data-target="#addConcertsToBandModal">Add Concerts</button>
                   </div>
                 </div>
               </div>
@@ -143,72 +138,99 @@
         <div class="col-md-10 col-md-offset-1">
           <div id=add-band-form-container>
             <script id="add-band-form-template" type="text/x-handlebars-template">
+
               <form id='add-band-form' class="form-horizontal">
                 <fieldset>
 
-                <!-- Form Name -->
-                <legend>Add New Artist</legend>
+                  <!-- Form Name -->
+                  <legend>Add New Artist</legend>
 
-                <!-- Text input-->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="name">Artist Name</label>
-                  <div class="col-md-8">
-                    <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+                  <!-- Text input-->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="name">Artist Name</label>
+                    <div class="col-md-8">
+                      <input id="band-name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+                    </div>
                   </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="formationDate">Formation Date</label>
-                  <div class="col-md-8">
-                    <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
+                  <!-- Text input-->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="formationDate">Formation Date</label>
+                    <div class="col-md-8">
+                      <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
+                    </div>
                   </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="recordLabal">Record Label</label>
-                  <div class="col-md-8">
-                    <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
+                  <!-- Text input-->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="recordLabal">Record Label</label>
+                    <div class="col-md-8">
+                      <input id="band-recordLabel" name="recordLabel" type="text" placeholder="Enter Record Label here" class="form-control input-md">
+                    </div>
                   </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="image_url">Image URL</label>
-                  <div class="col-md-8">
-                    <input id="band-image" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
+                  <!-- Text input-->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="image_url">Image URL</label>
+                    <div class="col-md-8">
+                      <input id="band-image" name="image_url" type="text" placeholder="Enter Image URL here" class="form-control input-md">
+                    </div>
                   </div>
-                </div>
-                <!-- Textarea-->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
-                  <div class="col-md-8">
-                    <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+                  <!-- Textarea-->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="description">Description</label>
+                    <div class="col-md-8">
+                      <textarea id="band-description" name="description" type="text" placeholder="Enter Description here" class="form-control input-md"></textarea>
+                    </div>
                   </div>
-                </div>
-                <!-- Textarea -->
-                <div class="form-group">
-                  <label class="col-md-2 col-md-offset-1 control-label" for="genres">Genres</label>
-                  <div class="col-md-8">
-                    <textarea class="form-control input-md" id="band-genres" name="genres" placeholder="Enter Genres (separated by commas)"></textarea>
+                  <!-- Textarea -->
+                  <div class="form-group">
+                    <label class="col-md-2 col-md-offset-1 control-label" for="genres">Genres</label>
+                    <div class="col-md-8">
+                      <textarea class="form-control input-md" id="band-genres" name="genres" placeholder="Enter Genres (separated by commas)"></textarea>
+                    </div>
                   </div>
-                </div>
 
-                <!-- Button -->
-                <div class="form-group">
-                  <div class="col-md-4">
-                    <a id="add-band-button"
-                      onclick="handleAddBandClick(this.form)"
-                      name="submit"
-                      class="btn btn-lg btn-primary add-band-button">
-                      Submit
-                    </a>
+                  <!-- Button -->
+                  <div class="form-group">
+                    <div class="col-md-4">
+                      <a id="add-band-button"
+                        onclick="handleAddBandClick(this.form)"
+                        name="submit"
+                        class="btn btn-lg btn-primary add-band-button">
+                        Submit
+                      </a>
+                    </div>
                   </div>
-                </div>
-
                 </fieldset>
               </form>
+            </script>
           </div>
         </div>
       </div>
     </section>
+    <!-- Add Concerts to Band Modal -->
+    <div class="modal hide fade" id="addConcertsToBandModal" tabindex="-1" role="dialog" aria-labelledby="addConcertsToBandModalTitle">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="addConcertsToBandModalTitle">Add Concerts</h4>
+          </div>
+          <div class="modal-body" id='addConcertsToBandModalBody'>
+            <p>It works</p>
+            <!-- <select id="concert-select" name="concerts" multiple="true">
+              {{#each concerts}}
+                <option value="{{this._id}}">{{this._id}}</option>
+              {{/each}}
+            </select> -->
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id='addConcertsToBandModalSubmit'>Save changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
   </body>
+
 </html>
