--- a/views/concert.html
+++ b/views/concert.html
@@ -44,11 +44,11 @@
             <li><a href="/bands">Artists</a></li>
             <li><a href="/concerts">Concerts</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <!-- <ul class="nav navbar-nav navbar-right">
             <li>
               <li><a href="/myprofile">My Profile</a></li>
             </li>
-          </ul>
+          </ul> -->
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
