--- a/views/concerts.html
+++ b/views/concerts.html
@@ -44,16 +44,16 @@
             <li><a href="/bands">Artists</a></li>
             <li class="active"><a href="#">Concerts<span class="sr-only">(current)</span></a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <!-- <ul class="nav navbar-nav navbar-right">
             <li>
               <li><a href="/myprofile">My Profile</a></li>
             </li>
-          </ul>
+          </ul> -->
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
-    <h1>Concerts Index</h1>
+    <h1>All Concerts</h1>
 
     <section>
       <!-- concerts! -->
@@ -81,12 +81,12 @@
                       <div class="col-md-9 col-xs-12">
                         <ul class="list-group" id="add-concerts">
                           <li class="list-group-item">
-                            <a href="/concerts/{{_id}}" onclick="handleSingleConcertClick()"><h3><span class='concert-eventName'>{{eventName}}</span></h3></a>
+                            <h3><span class='concert-eventName'><a href="/concerts/{{_id}}">{{eventName}}</a></span></h3>
                             <span class='concertId'>{{_id}}</span>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Artist</h4>
-                            <span class='concert-bandId'>{{band}}</span>
+                            <a href="/bands/{{band._id}}"><span class='concert-bandId'>{{band.name}}</span></a>
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Date</h4>
@@ -140,7 +140,7 @@
         <div class="col-md-10 col-md-offset-1">
           <div id="add-concert-form-container">
             <script id="add-concert-form-template" type="text/x-handlebars-template">
-              <form id='add-concert-form' class="form-horizontal">
+              <form name="add-concert-form" id="add-concert-form" class="form-horizontal">
                 <fieldset>
                 <!-- Form Name -->
                 <legend>Add New Concert</legend>
