Band link now populates on Concert update

--- a/views/concerts.html
+++ b/views/concerts.html
@@ -82,7 +82,7 @@
                         <ul class="list-group" id="add-concerts">
                           <li class="list-group-item">
                             <h3><span class='concert-eventName'><a href="/concerts/{{_id}}">{{eventName}}</a></span></h3>
-                            <span class='concertId'>{{_id}}</span>
+                            <!-- <span class='concertId'>{{_id}}</span> -->
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Artist</h4>
