Audio player now only shows on single page when the link exists

--- a/views/concerts.html
+++ b/views/concerts.html
@@ -115,7 +115,7 @@
                         </ul>
                         <!-- embed archive recording -->
                         <div class="music-player">
-                          <iframe src="{{recording_url}}&playlist=1" width="500" height="300" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+                          <!-- <iframe src="{{recording_url}}&playlist=1" width="500" height="300" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe> -->
                         </div>
 
                       </div>
