--- a/views/bands.html
+++ b/views/bands.html
@@ -80,12 +80,12 @@
                         <ul class="list-group">
                           <li class="list-group-item">
                             <h3><span class='band-name'><a class ="show-single-band" href="/api/bands/{{_id}}">{{name}}</a></span></h3>
-                            <span class='band-Id'>{{_id}}</span>
+                            <!-- <span class='band-Id'>{{_id}}</span> -->
                           </li>
-                          <li class="list-group-item">
+                          <!-- <li class="list-group-item">
                             <h4 class='inline-header'>Formation Date:</h4>
                             <span class='band-formationDate'>{{formationDate}}</span>
-                          </li>
+                          </li> -->
                           <li class="list-group-item">
                             <h4 class='inline-header'>Record Label:</h4>
                             <span class='band-recordLabel'>{{recordLabel}}</span>
@@ -153,12 +153,12 @@
                     </div>
                   </div>
                   <!-- Text input-->
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <label class="col-md-2 col-md-offset-1 control-label" for="formationDate">Formation Date</label>
                     <div class="col-md-8">
                       <input id="band-formationDate" name="formationDate" type="text" placeholder="" class="form-control input-md">
                     </div>
-                  </div>
+                  </div> -->
                   <!-- Text input-->
                   <div class="form-group">
                     <label class="col-md-2 col-md-offset-1 control-label" for="recordLabal">Record Label</label>
