--- a/views/concerts.html
+++ b/views/concerts.html
@@ -73,60 +73,23 @@
 
                   <!-- begin concert internal row -->
                     <div class='row concert-row'>
-
-                      <div class="col-md-3 col-xs-12 thumbnail concert-art">
-                        <span class='concert-image'><img class="img-responsive concert-image" src="{{image_url}}"/></span>
+                      <div class="col-md-3 col-xs-12 concert-art">
+                        <img class="concert-image thumbnail" src="{{image_url}}"/>
                       </div>
-
                       <div class="col-md-9 col-xs-12">
-                        <ul class="list-group" id="add-concerts">
-                          <li class="list-group-item">
-                            <h3><span class='concert-eventName'><a href="/concerts/{{_id}}">{{eventName}}</a></span></h3>
+                             <h3><span class='concert-eventName'><a href="/concerts/{{_id}}">{{eventName}}</a></span></h3>
+                             <a href="/bands/{{band._id}}"><span class='concert-bandId'>{{band.name}}</span></a>
                             <!-- <span class='concertId'>{{_id}}</span> -->
-                          </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>Artist</h4>
-                            <a href="/bands/{{band._id}}"><span class='concert-bandId'>{{band.name}}</span></a>
-                          </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>Date</h4>
-                            <span class='concert-date'>{{date}}</span>
-                          </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>Location:</h4>
-                            <span class='concert-location'>{{location}}</span>
-                          </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>setlist</h4>
-                            <pre><span class='concert-setlist'>{{setlist}}</span></pre>
-                          </li>
-                          <li class="list-group-item">
-                            <h4 class='inline-header'>Description:</h4>
-                            <span class='concert-description'>{{description}}</span>
-                          </li>
-                          <li class="list-group-item edit-concert-image hidden">
-                            <h4 class='inline-header'>Image URL</h4>
-                            <span class='concert-image-url'>{{image_url}}</span>
-                          </li>
-                          <li class="list-group-item edit-concert-recording hidden">
-                            <h4 class='inline-header'>Recording URL:</h4>
-                            <span class='concert-recording-url'>{{recording_url}}</span>
-                          </li>
-                        </ul>
-                        <!-- embed archive recording -->
-                        <div class="music-player">
-                          <!-- <iframe src="{{recording_url}}&playlist=1" width="500" height="300" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe> -->
-                        </div>
-
                       </div>
+
                     </div>
                   </div>
-                  <div class="panel-footer">
+                  <!-- <div class="panel-footer">
                     <button class="delete-concert-button btn btn-md btn-danger pull-right" data-concert-id="{{ concert._id }}">Delete</button>
                     <button class="update-concert-button btn btn-md btn-primary pull-right" data-concert-id="{{ concert._id }}">Update</button>
                     <button class="save-concert-button btn btn-success pull-right hidden" data-concert-id="{{ concert._id }}">Save Changes</button>
                     <!-- end of concert internal row -->
-                  </div>
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
