--- a/views/bands.html
+++ b/views/bands.html
@@ -79,7 +79,7 @@
                       <div class="col-md-9 col-xs-12">
                         <ul class="list-group">
                           <li class="list-group-item">
-                            <h3><span class='band-name'><a class ="show-single-band" href="/api/bands/{{_id}}">{{name}}</a></span></h3>
+                            <h3><span class='band-name'><a class ="show-single-band" href="/bands/{{_id}}">{{name}}</a></span></h3>
                             <!-- <span class='band-Id'>{{_id}}</span> -->
                           </li>
                           <!-- <li class="list-group-item">
