--- a/views/concert.html
+++ b/views/concert.html
@@ -81,7 +81,7 @@
                         <ul class="list-group" id="add-concerts">
                           <li class="list-group-item">
                             <h3><span class='concert-eventName'>{{concert.eventName}}</span></h3>
-                            <span class='concertId'>{{concert._id}}</span>
+                            <!-- <span class='concertId'>{{concert._id}}</span> -->
                           </li>
                           <li class="list-group-item">
                             <h4 class='inline-header'>Artist</h4>
