--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,9 +26,7 @@
 
   <body>
 
-    <script type="text/javascript">
-      window.user = {{{ user }}};
-    </script>
+    
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -51,7 +49,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <li><a href="/profile">My Profile</a></li>
+              <!-- <li><a href="/profile/{{user._id}}">My Profile</a></li> -->
               <li><a href="/login">Login</a></li>
               <li><a href="/logout">Logut</a></li>
               <li><a href="/signup">Signup</a></li>
